[options]
packages =
    mbaza_sequencer
package_dir=
    =src
install_requires =
    dill==0.3.6
    numpy==1.24.3
    pandarallel==1.6.5
    pandas==2.0.2
    Pillow==9.5.0
    pydantic==1.10.8
    scipy==1.10.1
    tqdm==4.65.0

[options.packages.find]
where=src

[metadata]
name = mbaza_sequencer
version = 0.1
description = Post-processing script for Mbaza to covert image predictions to sequence predictions

[options.entry_points]
console_scripts =
    mbaza_sequencer = mbaza_sequencer.main:main